# rsa_square

./: .gitattributes  .gitignore  LICENSE  README.md  pyproject.toml
data/exp_data/nonliteral_numbers/: experiment1-normalized.csv  experiment3a-normalized.csv  model-predictions.csv
data/exp_data/prag_mega_plus/: README.md  ScenariosCombinedDiversified.csv  ScenariosOriginalAndFlipped.v0.csv  ScenariosOriginalAndFlipped.v1.csv  ScenariosOriginalAndFlipped.v2.csv
data/ironic_weather_utterances_exps/: affect_aware_rsa.csv  human_dist_test.csv  human_dist_train.csv  metrics_test.csv  metrics_train.csv  model.pth  rsa_two_test.csv  rsa_two_train.csv  test_predictions.csv  train_predictions.csv  trained_rf_values.csv
data/nonliteral_number_exps/: meaning_probabilities_merged.csv  metrics.csv  pl0_marg_df.csv  pl1_marg_df.csv
data/prag_mega_plus_exps/: llm_probs.jsonl  llm_utterance_probs.jsonl  llm_utterance_probs_config.yaml
data/prag_mega_plus_exps/cache/: mistralai_Mistral-7B-Instruct-v0.3.jsonl
src/: README.md  __init__.py  appendix_table_5_and_6.ipynb  appendix_table_7.ipynb  nonliteral_numbers_exp.py  results_and_analysis.py  rsa.py  run.py  run_all_rsa.py  weather_utterances_exp.py
src/configs/: gen_llm=llama_8b_prob_llm=mistral_7b_instructmain_paper_results_and_analysis.yaml  generate_alt_utterances.yaml  generate_llm_prompt_probs.yaml  generate_utterance_probs.yaml  main_all_rsa_runs.yaml  main_base_rsa_config.yaml  rsa.yaml  weather_utterances_exp.yaml
src/llms/: base_llm.py
src/utils/: decorators.py  helpers.py
(+37 files in other folders)
